tests/Core/negative/parsing/test005.jvc
type Unit {
  unit : Unit;
};

type Unit' {
  unit : Unit';
};
